# LuminaDev

./: .gitignore  .gitlab-ci.yml  AUDIT_2026-05.md  AUDIT_COMBINED_2026-05.md  AUDIT_INDEPENDENT_REPORT.md  CLAUDE.md  CONTRIBUTING.md  MERGE_INSTRUCTIONS.md  PR_BODY.md  README.md  audit_report.md  codeRabbit.md  dashboardNewStyle.md  eslint.config.js  gitRefactor.md  newCore.md  package.json  phasesPlan.md  pnpm-lock.yaml  thoghts.md  walkthrough.md
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/src/: cloud_auth.rs  cloud_git_ipc.rs  compose_engine.rs  compose_ports.rs  compose_profiles.rs  docker_api.rs  docker_engine.rs  docker_ext.rs  executor.rs  git_doctor.rs  git_vcs_file_diff.rs  git_vcs_ipc.rs  git_vcs_network.rs  git_vcs_repo_state.rs  host_exec.rs  integration_test_support.rs  ipc_contract_tests.rs  lib.rs  main.rs  monitor_handlers.rs  profile_credentials.rs  profile_engine.rs  project_scaffold.rs  readiness.rs  readiness_ipc.rs  runtime_discover.rs  runtime_install.rs  runtime_jobs.rs  runtime_logs.rs  runtime_packages.rs  runtime_paths.rs  runtime_prune_contract_tests.rs  runtime_remove.rs  runtime_verify.rs  runtime_versioning.rs  ssh_handlers.rs  state.rs  store_engine.rs  system_info.rs  terminal_pty.rs  (+1 more)
apps/desktop/src-tauri/src/cloud_auth/: github.rs  gitlab.rs  helpers.rs  ipc.rs  mod.rs  remotes.rs  store.rs  types.rs
apps/desktop/src-tauri/tests/: cloud_auth_smoke.rs  compose_smoke.rs  docker_smoke.rs  git_vcs_smoke.rs  monitor_smoke.rs  sandbox_permission_probes.rs  ssh_smoke.rs  terminal_pty_smoke.rs
(+521 files in other folders)
