[package]
name = "lumina-dev"
version = "0.2.0"
description = "LuminaDev Tauri shell"
authors = ["Karim Termanini"]
edition = "2021"

[lib]
name = "lumina_dev_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.0", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tokio = { version = "1", features = ["process", "io-util", "sync", "rt-multi-thread", "macros", "time"] }
uuid = { version = "1", features = ["v4"] }
libc = "0.2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
aes-gcm = "0.10"
sha2 = "0.10"
portable-pty = "0.8"

[dev-dependencies]
tempfile = "3"
